<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="generic_error">Não foi possível executar a operação</string>

    <!--Tela de login-->
    <string name="app_name">Hungry</string>
    <string name="login">Login</string>
    <string name="insiraUmEmail">Insira um email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_Senha">Esqueceu a senha?</string>
    <string name="cadastre_se">Cadastre -se</string>

    <!--Tela de cadastro-->
    <string name="crieSuaConta">Crie sua nova conta</string>
    <string name="confirmeSuaSenha">Confirme sua senha</string>
    <string name="informacaoSenha">Será enviado um e-mail para confirmar a sua conta.</string>
    <string name="possuiConta">Já possui uma conta?</string>
    <string name="cadastrar">Cadastrar</string>

    <!-- Verifica Código -->
    <string name="recuperarSenha">Recuperar Senha</string>
    <string name="informativoRecuperarSenha">Será enviado um e-mail com todas as intruções para recuperação da sua senha.</string>
    <string name="codigoEnviado">Insira o código enviado</string>
    <string name="recuperar">Recuperar</string>
    <string name="verificar">Verificar</string>
    <string name="mensagem_envio_email">Email enviado com sucesso.</string>

    <!-- Comunicacao com backend -->
    <string name="dialogFlow_server_url">https://projeto-receitas-app.herokuapp.com/api/</string>
    <string name="dialogFlow_server_error">Ops! Aconteceu um erro, tente novamente!</string>
    <string name="title_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>